# flasking

./: readme.rst  requirements.txt  sample_data.py  setup.cfg
project/: app.py  models.py  sample_data.py
project/static/: styles.css
project/templates/: base.html  details.html  login.html  transactions.html
project/tests/: conftest.py  test_app.py  test_sample_data.py
