[metadata]
name = flasking
version = 0.0.1

license = BSD-3-Clause
maintainer = felonx
maintainer_email = pawel.feliks@gmail.com
description = The basic blog app built in the Flask tutorial.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = project/tests

[coverage:run]
branch = True
source =
    project